test/lit/vpto/materialize_simt_persistent_fragment_vector_out_of_bounds_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 --pto-backend=vpto --emit-vpto %s -o /dev/null 2>&1 | FileCheck %s

module attributes {pto.target_arch = "a5", pto.kernel_kind = #pto.kernel_kind<vector>} {
  func.func @persistent_fragment_vector_out_of_bounds() attributes {pto.entry} {
    %c1_i32 = arith.constant 1 : i32
    %fragment = llvm.alloca %c1_i32 x f32 {pto.persistent} : (i32) -> !llvm.ptr
    pto.section.simt<<<32, 1, 1>>> {
      %value = arith.constant dense<1.000000e+00> : vector<2xf32>
      llvm.store %value, %fragment : vector<2xf32>, !llvm.ptr
    }
    return
  }
}

// CHECK: error: 'llvm.store' op persistent SIMT fragment access at byte offset 0 with 2 scalar lane(s) exceeds allocation size 4
